remove nowrap as it is useless with the new layout and buggy with FF

--- a/var/www/style.css
+++ b/var/www/style.css
@@ -140,10 +140,6 @@ section>ul li {
   opacity: 1;
 }
 
-/* Tables */
-tbody td {
-  white-space: nowrap;
-}
 /* Alerts */
 .red {
   font-weight:bolder;
